Puerto Rico baby 🇵🇷

--- a/kickstarter.html
+++ b/kickstarter.html
@@ -4,11 +4,11 @@ title: Kickstarter
 subtitle: We remain lean, agile, moving quickly
 ---
 
-	<div class="ready">Change of plans</div>
+	<div class="ready">Ongoing fundraising campaign</div>
 
 	<br><br>
 
-	<p>The energy in the crypto space is simply overwhelming. We didn't launch the Kickstarter after all...</p>
+	<p>Establishing new entity in Puerto Rico 🇵🇷</p>
 
 	<p>BTC: <input readonly="readonly" value="17zVA88xk4Ma7Cza4NXGYcP4Z1Qz7TUdzV" style="color: black; padding: 5px; width: 560px;"></p>
 	<p>ETH: <input readonly="readonly" value="0x85A363699C6864248a6FfCA66e4a1A5cCf9f5567" style="color: black; padding: 5px; width: 560px;"></p>
